# fractal-museum.cpp

./: .editorconfig  .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
work/: .gitignore  CMakeLists.txt  README.md  config.xml  config.xsd
work/include/: const.hpp  drawer.hpp  function.hpp  interface.hpp  make_image.hpp  pugixml.hpp  util.hpp
work/include/config/: burning_ship_config.hpp  config.hpp  config_barnsley_fern.hpp  config_burning_ship.hpp  config_julia.hpp  config_mandelbrot.hpp  config_pythagoras_tree.hpp  config_recursive_tree.hpp  config_sierpinski_carpet.hpp  config_sierpinski_triangle.hpp  config_tricorn.hpp  julia.hpp  julia_config.hpp  mandelbrot_config.hpp  tricorn_config.hpp
work/include/lib/: pugixml.hpp
work/src/: CMakeLists.txt  config_parser.cpp  hsl_to_rgb.cpp  join_path.cpp  main.cpp  make_image.cpp
work/src/drawer/: drawer_barnsley_fern.cpp  drawer_burning_ship.cpp  drawer_julia.cpp  drawer_mandelbrot.cpp  drawer_pythagoras_tree.cpp  drawer_recursive_tree.cpp  drawer_sierpinski_carpet.cpp  drawer_sierpinski_triangle.cpp  drawer_tricorn.cpp  julia.cpp  mandelbrot.cpp  tricorn.cpp
work/src/function/: hsl_to_rgb.cpp  join_path.cpp
work/src/lib/: pugixml.cpp
work/src/util/: draw_polygon.cpp  draw_polyline.cpp
www/: README.md  package.json  pages.ts  setting.ts
www/components/: Layout.tsx
www/pages/: _app.tsx  index.tsx  museum.tsx
www/public/: .gitignore
